--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    form_datetime_format: dd/MM/yyyy HH:mm
+    mailer_user: mail@mail.com
 
 services:
     # default configuration for services in *this* file
@@ -22,6 +24,9 @@ services:
     App\Controller\:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
+        
+    App\Form\ActiviteType:
+        arguments: ['%form_datetime_format%']
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
