--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "startbootstrap-sb-admin-2": "^4.0.6"
+        "@fullcalendar/bootstrap": "^4.3.0",
+        "@fullcalendar/core": "^4.3.1",
+        "@fullcalendar/daygrid": "^4.3.0",
+        "@fullcalendar/list": "^4.3.0",
+        "@fullcalendar/timegrid": "^4.3.0",
+        "startbootstrap-sb-admin-2": "^4.0.6",
+        "symfony-collection": "github:ninsuo/symfony-collection"
     }
 }
