--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@fullcalendar/bootstrap": "^4.3.0",
         "@fullcalendar/core": "^4.3.1",
         "@fullcalendar/daygrid": "^4.3.0",
+        "@fullcalendar/interaction": "^4.3.0",
         "@fullcalendar/list": "^4.3.0",
         "@fullcalendar/timegrid": "^4.3.0",
         "eonasdan-bootstrap-datetimepicker": "^4.17.47",
